--- a/bootstrap/pom.xml
+++ b/bootstrap/pom.xml
@@ -3,14 +3,14 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <groupId>com.cuckoo.framework</groupId>
-        <artifactId>navi</artifactId>
-        <version>1.0.0-release</version>
+        <groupId>com.youku.java.navi</groupId>
+        <artifactId>javanavi</artifactId>
+        <version>3.0.0-release</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
     <artifactId>bootstrap</artifactId>
-    <version>0.0.1-release</version>
+    <version>1.0.0-release</version>
 
     <dependencies>
         <!-- APACHE COMMONS-LANG-->
