--- a/pom.xml
+++ b/pom.xml
@@ -4,9 +4,9 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.cuckoo.framework</groupId>
-    <artifactId>navi</artifactId>
-    <version>1.0.0-release</version>
+    <groupId>com.youku.java.navi</groupId>
+    <artifactId>javanavi</artifactId>
+    <version>3.0.0-release</version>
     <packaging>pom</packaging>
 
     <modules>
@@ -78,11 +78,6 @@
                 <version>3.1.2.RELEASE</version>
             </dependency>
             <dependency>
-                <groupId>org.json</groupId>
-                <artifactId>json</artifactId>
-                <version>20131018</version>
-            </dependency>
-            <dependency>
                 <groupId>org.codehaus.jackson</groupId>
                 <artifactId>jackson-core-asl</artifactId>
                 <version>1.9.9</version>
@@ -119,9 +114,9 @@
                 <version>1.0.0.RELEASE</version>
             </dependency>
             <dependency>
-                <groupId>com.cuckoo.framework</groupId>
+                <groupId>com.youku.java.navi</groupId>
                 <artifactId>bootstrap</artifactId>
-                <version>0.0.1-release</version>
+                <version>1.0.0-release</version>
             </dependency>
             <dependency>
                 <groupId>com.youku.java.navi.engine</groupId>
