文件整理修改

--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
         <module>bootstrap</module>
         <module>framework</module>
         <module>demo</module>
+        <module>plugin</module>
     </modules>
 
     <dependencyManagement>
@@ -237,8 +238,8 @@
         <downloadSources>true</downloadSources>
 
         <!-- compiler settings properties -->
-        <java_source_version>1.8</java_source_version>
-        <java_target_version>1.8</java_target_version>
+        <java_source_version>1.7</java_source_version>
+        <java_target_version>1.7</java_target_version>
         <file_encoding>UTF-8</file_encoding>
     </properties>
 
