--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>framework</module>
         <module>demo</module>
         <module>plugin</module>
+        <module>namesrv</module>
     </modules>
 
     <dependencyManagement>
