--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,18 @@
     <dependencyManagement>
         <dependencies>
             <dependency>
+                <groupId>com.youku.java.navi</groupId>
+                <artifactId>bootstrap</artifactId>
+                <version>1.0.0-release</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.youku.java.navi</groupId>
+                <artifactId>plugin</artifactId>
+                <version>3.0.0-release</version>
+            </dependency>
+
+            <dependency>
                 <groupId>javassist</groupId>
                 <artifactId>javassist</artifactId>
                 <version>3.12.1.GA</version>
@@ -117,11 +129,6 @@
             </dependency>
             <dependency>
                 <groupId>com.youku.java.navi</groupId>
-                <artifactId>bootstrap</artifactId>
-                <version>1.0.0-release</version>
-            </dependency>
-            <dependency>
-                <groupId>com.youku.java.navi</groupId>
                 <artifactId>framework</artifactId>
                 <version>3.0.0-release</version>
             </dependency>
@@ -153,7 +160,7 @@
             <dependency>
                 <groupId>com.alibaba</groupId>
                 <artifactId>fastjson</artifactId>
-                <version>1.1.43</version>
+                <version>1.2.8</version>
             </dependency>
             <dependency>
                 <groupId>org.apache.zookeeper</groupId>
