rest api 反射逻辑BUG修复~

--- a/conf/server.conf
+++ b/conf/server.conf
@@ -1,42 +1,42 @@
 #[server]
-protocol = http
-server.name = navi
-listen.port = 8080
-module.load.interval = 30
+protocol=http
+server.name=navi
+listen.port=8080
+module.load.interval=30
 
 #[netty]
 #work modes:test,deploy
-mode = test
+mode=test
 
 #executor handler setting
-FreePoolSize = 16
-BusyPoolSize = 200
+FreePoolSize=16
+BusyPoolSize=200
 
 #boss setting
-backlog = 1000
-reuseAddress = true
+backlog=1000
+reuseAddress=true
 
 #child setting
-child.keepAlive = true
-child.tcpNoDelay = true
-chunk.size = 307200
-child.sendBufferSize = 1048576
-child.receiveBufferSize = 1048576
-child.channel.close = true
-child.channel.idltime = 120
+child.keepAlive=true
+child.tcpNoDelay=true
+chunk.size=307200
+child.sendBufferSize=1048576
+child.receiveBufferSize=1048576
+child.channel.close=true
+child.channel.idltime=120
 
 #other option
 #request_timeout=50
-header_delimiter = \2
-content_delimiter = \3
-packet_delimiter = \4
-udp_max_packet_size = 1024
-tcp_max_packet_size = 1048576
+header_delimiter=\2
+content_delimiter=\3
+packet_delimiter=\4
+udp_max_packet_size=1024
+tcp_max_packet_size=1048576
 
 #redirect_str=abc/def:abc,efg:efg/hij  --perfect matching,replace first matching
 
 #zookeeper config
-zk.open = false
-zk.url.offline = 10.10.72.42:2181
-zk.url.deploy = 10.105.17.81:2181, 10.105.17.82: 2181, 10.105.17.83: 2181
-zk.timeout = 1000
+zk.open=false
+zk.url.offline=10.10.72.42:2181
+zk.url.deploy=10.105.17.81:2181,10.105.17.82:2181,10.105.17.83:2181
+zk.timeout=1000
