--- a/bootstrap/pom.xml
+++ b/bootstrap/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <groupId>com.youku.java.navi</groupId>
-        <artifactId>javanavi</artifactId>
+        <artifactId>javanavi-parent</artifactId>
         <version>3.0.0-release</version>
     </parent>
 
