--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -2,9 +2,10 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+
     <parent>
         <groupId>com.youku.java.navi</groupId>
-        <artifactId>javanavi</artifactId>
+        <artifactId>javanavi-parent</artifactId>
         <version>3.0.0-release</version>
     </parent>
 
