--- a/framework/pom.xml
+++ b/framework/pom.xml
@@ -4,12 +4,12 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <groupId>com.youku.java.navi</groupId>
-        <artifactId>javanavi</artifactId>
+        <artifactId>javanavi-parent</artifactId>
         <version>3.0.0-release</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>framework</artifactId>
+    <artifactId>JavaNavi</artifactId>
 
     <dependencies>
 
