--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.youku.java.navi</groupId>
-    <artifactId>javanavi</artifactId>
+    <artifactId>javanavi-parent</artifactId>
     <version>3.0.0-release</version>
     <packaging>pom</packaging>
 
@@ -167,6 +167,12 @@
                 <groupId>org.apache.zookeeper</groupId>
                 <artifactId>zookeeper</artifactId>
                 <version>3.4.5-cdh5.2.0</version>
+                <exclusions>
+                    <exclusion>
+                        <groupId>org.jboss.netty</groupId>
+                        <artifactId>netty</artifactId>
+                    </exclusion>
+                </exclusions>
             </dependency>
 
             <dependency>
