--- a/pom.xml
+++ b/pom.xml
@@ -130,7 +130,7 @@
             </dependency>
             <dependency>
                 <groupId>com.youku.java.navi</groupId>
-                <artifactId>framework</artifactId>
+                <artifactId>JavaNavi</artifactId>
                 <version>3.0.0-release</version>
             </dependency>
             <dependency>
