--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -18,8 +18,12 @@
         <dependency>
             <groupId>com.youku.java.navi</groupId>
             <artifactId>JavaNavi</artifactId>
-            <version>3.0.0-release</version>
             <scope>provided</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>com.youku.java.navi</groupId>
+            <artifactId>plugin</artifactId>
         </dependency>
     </dependencies>
 
